# bud

./: .gitignore  README.md  pyproject.toml
.bud/: bud.toml  time.csv
.bud/goals/: goal.json
.bud/tasks/: task.json  task_log.json
bud/: bud.py  bud_helpers.py  bud_types.py  clock.py  goal.py  tags  task.py
bud/.checklist/: checklist.toml
tests/: test_please.py
